--- a/reports/bitcoin_distribution_addr.html
+++ b/reports/bitcoin_distribution_addr.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Bitcoin address distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin address distribution</h2><p><b> Thursday  22 Feb 2024
+<!DOCTYPE html><html><head><title>Bitcoin address distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin address distribution</h2><p><b> Friday    23 Feb 2024
 
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Daily update</p>
 <table class='table table-striped'>
@@ -11,6 +11,90 @@
 <th class='text-center'>Y % change</th>
 </tr></thead>
 
+  <tr valign="top">
+    <td align="left">Humpback</td>
+    <td align="left">&gt;10K BTC</td>
+    <td align="right">109</td>
+    <td align="right">109</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right" class="danger" >-2</td>
+    <td align="right">0</td>
+    <td align="right" class="danger" >-6</td>
+    <td align="right" class="danger" >-5.217</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Whale</td>
+    <td align="left">1K-10K BTC</td>
+    <td align="right">2037</td>
+    <td align="right">2029</td>
+    <td align="right">8</td>
+    <td align="right">28</td>
+    <td align="right">146</td>
+    <td align="right">120</td>
+    <td align="right">123</td>
+    <td align="right">6.426</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Shark</td>
+    <td align="left">100-1K BTC</td>
+    <td align="right">13637</td>
+    <td align="right">13647</td>
+    <td align="right" class="danger" >-10</td>
+    <td align="right" class="danger" >-16</td>
+    <td align="right" class="danger" >-257</td>
+    <td align="right" class="danger" >-304</td>
+    <td align="right" class="danger" >-448</td>
+    <td align="right" class="danger" >-3.181</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Fish</td>
+    <td align="left">10-100 BTC</td>
+    <td align="right">138359</td>
+    <td align="right">138358</td>
+    <td align="right">1</td>
+    <td align="right" class="danger" >-30</td>
+    <td align="right" class="danger" >-534</td>
+    <td align="right" class="danger" >-1119</td>
+    <td align="right" class="danger" >-948</td>
+    <td align="right" class="danger" >-0.681</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Crab</td>
+    <td align="left">1-10 BTC</td>
+    <td align="right">863996</td>
+    <td align="right">863742</td>
+    <td align="right">254</td>
+    <td align="right">465</td>
+    <td align="right" class="danger" >-391</td>
+    <td align="right" class="danger" >-460</td>
+    <td align="right">37129</td>
+    <td align="right">4.490</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Shrimp</td>
+    <td align="left">&lt;1 BTC</td>
+    <td align="right">51280074</td>
+    <td align="right">51257805</td>
+    <td align="right">22269</td>
+    <td align="right">144574</td>
+    <td align="right" class="danger" >-481884</td>
+    <td align="right">1490886</td>
+    <td align="right">8085383</td>
+    <td align="right">18.718</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Total</td>
+    <td align="left">&nbsp; </td>
+    <td align="right">52298212</td>
+    <td align="right">52191498</td>
+    <td align="right">22522</td>
+    <td align="right">145022</td>
+    <td align="right" class="danger" >-482922</td>
+    <td align="right">&nbsp; </td>
+    <td align="right">334809</td>
+    <td align="right">20.555</td>
+  </tr>
 </table>
 
 <a href="https://bgeometrics.com" target="_blank"><img src="https://bgeometrics.github.io/Logo_BGeometrics.png" alt="BGeometrics" width="20%" height="20%"></a></div></body></html>
