--- a/reports/bitcoin_distribution_coin.html
+++ b/reports/bitcoin_distribution_coin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Bitcoin coin distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin coin distribution</h2><p><b> Thursday  22 Feb 2024
+<!DOCTYPE html><html><head><title>Bitcoin coin distribution</title><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'></head><body><div class='container'><h2>Bitcoin coin distribution</h2><p><b> Friday    23 Feb 2024
 
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Daily update</p>
 <table class='table table-striped'>
@@ -11,6 +11,90 @@
 <th class='text-center'>Y % change</th>
 </tr></thead>
 
+  <tr valign="top">
+    <td align="left">Humpback</td>
+    <td align="left">&gt;10K BTC</td>
+    <td align="right">3012688</td>
+    <td align="right">3013414</td>
+    <td align="right" class="danger" >-726</td>
+    <td align="right">19225</td>
+    <td align="right" class="danger" >-50703</td>
+    <td align="right">59307</td>
+    <td align="right" class="danger" >-12403</td>
+    <td align="right" class="danger" >-0.410</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Whale</td>
+    <td align="left">1K-10K BTC</td>
+    <td align="right">4915436</td>
+    <td align="right">4911419</td>
+    <td align="right">4017</td>
+    <td align="right">1830</td>
+    <td align="right">209778</td>
+    <td align="right">198617</td>
+    <td align="right">352339</td>
+    <td align="right">7.721</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Shark</td>
+    <td align="left">100-1K BTC</td>
+    <td align="right">3753673</td>
+    <td align="right">3757697</td>
+    <td align="right" class="danger" >-4024</td>
+    <td align="right" class="danger" >-14558</td>
+    <td align="right" class="danger" >-101914</td>
+    <td align="right" class="danger" >-137536</td>
+    <td align="right" class="danger" >-165728</td>
+    <td align="right" class="danger" >-4.228</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Fish</td>
+    <td align="left">10-100 BTC</td>
+    <td align="right">4392379</td>
+    <td align="right">4391835</td>
+    <td align="right">544</td>
+    <td align="right" class="danger" >-1396</td>
+    <td align="right" class="danger" >-18919</td>
+    <td align="right" class="danger" >-38842</td>
+    <td align="right" class="danger" >-33258</td>
+    <td align="right" class="danger" >-0.751</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Crab</td>
+    <td align="left">1-10 BTC</td>
+    <td align="right">2145281</td>
+    <td align="right">2145076</td>
+    <td align="right">205</td>
+    <td align="right">337</td>
+    <td align="right" class="danger" >-1742</td>
+    <td align="right" class="danger" >-6366</td>
+    <td align="right">78088</td>
+    <td align="right">3.777</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Shrimp</td>
+    <td align="left">&lt;1 BTC</td>
+    <td align="right">1412812</td>
+    <td align="right">1412560</td>
+    <td align="right">252</td>
+    <td align="right">538</td>
+    <td align="right" class="danger" >-8120</td>
+    <td align="right">6719</td>
+    <td align="right">115771</td>
+    <td align="right">8.926</td>
+  </tr>
+  <tr valign="top">
+    <td align="left">Total</td>
+    <td align="left">&nbsp; </td>
+    <td align="right">19632269</td>
+    <td align="right">19630538</td>
+    <td align="right">268</td>
+    <td align="right">5976</td>
+    <td align="right">28380</td>
+    <td align="right">1489123</td>
+    <td align="right">334809</td>
+    <td align="right">15.035</td>
+  </tr>
 </table>
 
 <a href="https://bgeometrics.com" target="_blank"><img src="https://bgeometrics.github.io/Logo_BGeometrics.png" alt="BGeometrics" width="20%" height="20%"></a></div></body></html>
