--- a/reports/bitcoin_distribution_addr_tables.html
+++ b/reports/bitcoin_distribution_addr_tables.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container mt-3">
       <h2>Bitcoin Address Distribution</h2>
-      <p>Thursday 22 February 2024.  Daily update</p>            
+      <p>Friday 23 February 2024.  Daily update</p>            
       <table border="1" class="dataframe table table-striped align-left table-responsive text-start">
   <thead>
     <tr style="text-align: left;">
@@ -30,6 +30,90 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>Humpback</td>
+      <td>&gt;10K BTC</td>
+      <td>109</td>
+      <td>109</td>
+      <td>0</td>
+      <td>1</td>
+      <td class="bg-warning">-2</td>
+      <td>0.0</td>
+      <td class="bg-warning">-6</td>
+      <td class="bg-warning">-5.217</td>
+    </tr>
+    <tr>
+      <td>Whale</td>
+      <td>1K-10K BTC</td>
+      <td>2037</td>
+      <td>2029</td>
+      <td>8</td>
+      <td>28</td>
+      <td>146</td>
+      <td>120.0</td>
+      <td>123</td>
+      <td>6.426</td>
+    </tr>
+    <tr>
+      <td>Shark</td>
+      <td>100-1K BTC</td>
+      <td>13637</td>
+      <td>13647</td>
+      <td class="bg-warning">-10</td>
+      <td class="bg-warning">-16</td>
+      <td class="bg-warning">-257</td>
+      <td class="bg-warning">-304.0</td>
+      <td class="bg-warning">-448</td>
+      <td class="bg-warning">-3.181</td>
+    </tr>
+    <tr>
+      <td>Fish</td>
+      <td>10-100 BTC</td>
+      <td>138359</td>
+      <td>138358</td>
+      <td>1</td>
+      <td class="bg-warning">-30</td>
+      <td class="bg-warning">-534</td>
+      <td class="bg-warning">-1119.0</td>
+      <td class="bg-warning">-948</td>
+      <td class="bg-warning">-0.681</td>
+    </tr>
+    <tr>
+      <td>Crab</td>
+      <td>1-10 BTC</td>
+      <td>863996</td>
+      <td>863742</td>
+      <td>254</td>
+      <td>465</td>
+      <td class="bg-warning">-391</td>
+      <td class="bg-warning">-460.0</td>
+      <td>37129</td>
+      <td>4.490</td>
+    </tr>
+    <tr>
+      <td>Shrimp</td>
+      <td>&lt;1 BTC</td>
+      <td>51280074</td>
+      <td>51257805</td>
+      <td>22269</td>
+      <td>144574</td>
+      <td class="bg-warning">-481884</td>
+      <td>1490886.0</td>
+      <td>8085383</td>
+      <td>18.718</td>
+    </tr>
+    <tr>
+      <td>Total</td>
+      <td></td>
+      <td>52298212</td>
+      <td>52191498</td>
+      <td>22522</td>
+      <td>145022</td>
+      <td class="bg-warning">-482922</td>
+      <td>NaN</td>
+      <td>334809</td>
+      <td>20.555</td>
+    </tr>
   </tbody>
 </table>
     </div>
