--- a/bitcoin_distribution_coin_g_humpback.html
+++ b/bitcoin_distribution_coin_g_humpback.html
@@ -242,7 +242,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_realized_pnl_g.html">
+            <a href="realized_profit_loss_ratio.html">
               <i class="bi bi-circle"></i><span>Net Realized Profit and Loss</span>
             </a>
           </li>
