--- a/bitcoin_hashprice_g.html
+++ b/bitcoin_hashprice_g.html
@@ -115,6 +115,11 @@
               <i class="bi bi-circle"></i><span>BTC Price a day like</span>
             </a>
           </li>
+          <li>
+            <a href="pi_cycle.html">
+              <i class="bi bi-circle"></i><span>Pi Cycle</span>
+            </a>
+          </li>
         </ul>
       </li><!-- End Components Nav -->
 
