--- a/graphics/sth_mvrv_heatmap_3m.html
+++ b/graphics/sth_mvrv_heatmap_3m.html
@@ -77,7 +77,7 @@
                 },
 
                 series: [{
-                    name: 'SOPR',
+                    name: 'STH MVRV',
                     data: data,
                     dataLabels: {
                         enabled: false,
