--- a/hodl_waves_realized_cap.html
+++ b/hodl_waves_realized_cap.html
@@ -453,7 +453,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="600px" src="graphics/sth_realized_price.html" allow="fullscreen" title="STH Realized Price" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="graphics/hodl_waves_realized_cap.html" allow="fullscreen" title="Bitcoin Hodl Waves Realized Cap" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
@@ -461,24 +461,6 @@
         </div><!-- End Left side columns -->
 
       </div>
-    </section>
-    <br>
-    <section>
-      <div class="container">
-        <a href="graphics/sth_realized_price.html">
-          <h5>Bitcoin Short Term Hodler Realized Price</h5>
-        </a>
-        <p> 
-          STH Realized Price are investors in the world of Bitcoin who maintain their assets for a period of less than 155 days.
-	  <br><br>Unlike long-term 'Hodlers', who intend to hold their cryptocurrencies for extended periods, STHs seek to take advantage of short-term price fluctuations in the market, they are more price sensitive than LTHs.
-	  <br><br>The graph shows the market price of BTC and the price at which these investors acquired the bitcoins (Realized Price).
-	  <br><br>STH are known for their willingness to enter and exit the Bitcoin market in relatively short periods, based on rapid changes in price.
-	  <br><br>Historically, when the STH realized (acquisition) price crosses the market price from above to below, that is, it becomes worth less, it indicates a bullish period, the STH are in profits and causes FOMO and when the cross is from below to above It shows that they are entering a bearish period, they are in losses and there are many sales of BTC.
-	  <br><br>In short, the Short Term Hodler in Bitcoin is an active player in the market, taking advantage of short-term profit opportunities while managing the risks associated with cryptocurrency market volatility."
-        </p>
-
-      </div>
-
     </section>
 
   </main><!-- End #main -->
