--- a/realized_profit_loss_ratio.html
+++ b/realized_profit_loss_ratio.html
@@ -172,7 +172,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_reacap_hodl_waves_g.html">
+            <a href="hodl_waves_realized_cap.html">
               <i class="bi bi-circle"></i><span>Hodl Waves Realized Cap</span>
             </a>
           </li>
