--- a/alfabitcoin/hodl_waves_alfabitcoin.html
+++ b/alfabitcoin/hodl_waves_alfabitcoin.html
@@ -170,7 +170,7 @@
                 data: data_hw_age_8y_,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -179,7 +179,7 @@
                 data: data_hw_age_4y_8y,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -188,7 +188,7 @@
                 data: data_hw_age_3y_4y,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -197,7 +197,7 @@
                 data: data_hw_age_2y_3y,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -206,7 +206,7 @@
                 data: data_hw_age_1y_2y,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -216,7 +216,7 @@
                 visible: false,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -226,7 +226,7 @@
                 visible: false,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -236,7 +236,7 @@
                 visible: false,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -246,7 +246,7 @@
                 visible: false,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -256,7 +256,7 @@
                 visible: false,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }, {
@@ -266,7 +266,7 @@
                 visible: false,
                 tooltip: {
                     valueDecimals: 2,
-                    valueSuffix: ' ({point.percentage:.0f}%)'
+                    valueSuffix: ' %'
                 },
                 yAxis: 0
             }
