--- a/realized_price_g.html
+++ b/realized_price_g.html
@@ -256,6 +256,11 @@
               <i class="bi bi-circle"></i><span>Bitcoin Liveliness</span>
             </a>
           </li>
+          <li>
+            <a href="montecarlo_100.html">
+              <i class="bi bi-circle"></i><span>Montecarlo next 100 days</span>
+            </a>
+          </li>
         </ul>
       </li>
 
