--- a/graphics/montecarlo_365.html
+++ b/graphics/montecarlo_365.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin Simulation Montecarlo next 100 days</title>
+    <title>Bitcoin Monte Carlo simulation from 365 years ago to today</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
 </head>
 <body>
     <div id="container-iframe">
-        <img src="../reports/SM_100.png" alt="Bitcoin Simulation Montercalo next 100 days" width="100%" height="600px">
+        <img src="../reports/SM_365.png" alt="Bitcoin Monte Carlo simulation from 365 years ago to today" width="100%" height="600px">
     </div>
 
 </body>
