--- a/bitcoin_reacap_hodl_waves_g.html
+++ b/bitcoin_reacap_hodl_waves_g.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="__keykwords__" name="keywords">
+  <meta content="Hodl Waves Realized" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
