--- a/bitcoin_distribution_coin_g_whale.html
+++ b/bitcoin_distribution_coin_g_whale.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="__keykwords__" name="keywords">
+  <meta content="Address Coins Whale 1K to 10K BTC" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
