--- a/cdd.html
+++ b/cdd.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="__keykwords__" name="keywords">
+  <meta content="Coins Days Destroyed (CDD)" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
