--- a/montecarlo_100.html
+++ b/montecarlo_100.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="__keykwords__" name="keywords">
+  <meta content="Simulation Montecarlo next 100 days" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
