--- a/realized_profit_loss_ratio.html
+++ b/realized_profit_loss_ratio.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="__keykwords__" name="keywords">
+  <meta content="Net Realized Profit and Loss" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
