charts dark mode

--- a/graphics/capitalization_dark.html
+++ b/graphics/capitalization_dark.html
@@ -9,17 +9,6 @@
 <body>
     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/stocktools/gui.css">
     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
-    <!--
-    <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/themes/dark-unica.css">
-    <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/themes/sand-signika.css">
-    <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/themes/grid-light.css">
-    <link rel="stylesheet" type="text/css" href="file://D:/Proyectos/bgeometrics_new/bgeometrics.github.io/assets/css/themes/dark-unica-bis.css">
-
-    <script src="https://code.highcharts.com/themes/dark-unica.js"></script>
-    <script src="https://code.highcharts.com/themes/sand-signika.js"></script>
-    <script src="https://code.highcharts.com/themes/brand-dark.js"></script>
-    <script src="file://D:/Proyectos/bgeometrics_new/bgeometrics.github.io/assets/themes/brand-dark.js"></script>
-    -->
 
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="https://code.highcharts.com/stock/indicators/indicators-all.js"></script>
@@ -33,7 +22,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
-    <script src="file://D:/Proyectos/bgeometrics_new/bgeometrics.github.io/assets/js/themes/brand-dark.js"></script>
+    <script src="https://charts.bgeometrics.com/assets/js/themes/brand-dark.js"></script>
 
     <div id="container-iframe" style="width:100%; height:600px;"></div>
 
