--- a/tools/web-generation-model-services-end.html
+++ b/tools/web-generation-model-services-end.html
@@ -29,7 +29,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Analytics as you want</h5>
-              We offer a unique experience allowing you to customize and adapt Bitcoin data to your specific needs. Build your analysis, however you want.
+	      We offer a unique experience that allows you to customize and tailor Bitcoin data to your specific needs. We can incorporate any type of external data. Build your analysis, however you want.
             </div>
           </div>
         </div>
@@ -62,6 +62,14 @@
             <div class="card-body">
               <h5 class="card-title">Personalized Support, Customized Solutions</h5>
               We are here to help you every step of the way. From data customization to result interpretation, our team of experts is ready to provide you with the support you need.
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Charts with Highcharts and Plotly</h5>
+	      We are specialists in creating graphs with the Highcharts and Plotly frameworks, if you have data and want us to create graphs, contact us
             </div>
           </div>
         </div>
