--- a/capitalization_dark.html
+++ b/capitalization_dark.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="__keywords__" name="keywords">
+  <meta content="Bitcoin Capitalization" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -454,273 +454,106 @@
 
   <main id="main" class="main">
 
-    <section class="section">
+    <section class="section dashboard">
       <div class="row">
         <div id="searchResults"></div>
 
-      	<div class="pagetitle">
-	        <h1>Bitcoin On-Chain Analytics</h1>
-      	</div>
-
+        <!-- Left side columns -->
         <div class="col-lg-12">
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="200px" src="graphics/price_heatmap_6m.html" allow="fullscreen" title="BTC Price" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="graphics/capitalization_dark.html" allow="fullscreen" title="Bitcoin Capitalization" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-xs-12 center-block text-center">
-              <p>Historically in Bitcoin, green periods have been good times to buy and red periods have been good times to sell.
-                &nbsp;&nbsp;<a href="index.html">4 years</a>
-                &nbsp;&nbsp;<a href="index_6m.html">180 days</a>
-                &nbsp;&nbsp;<a href="index_3m.html">90 days</a>
-              </p>
-            </div>
           </div>
+        </div><!-- End Left side columns -->
 
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/mvrv_heatmap_6m.html" allow="fullscreen" title="MVRV Z-Score" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
+      </div>
+    </section>
+    <br>
+    <section>
+      <div class="container">
+        <a href="graphics/capitalization.html">
+          <h5>Bitcoin Capitalization</h5>
+        </a>
+        <p> 
+          Navigating the complex world of Bitcoin valuation involves understanding various metrics that shed light on its market dynamics. 
+          <br>Market capitalization (Marketcap), Realized capitalization (Realizedcap), Thermal capitalization (Thermocap), and investor capitalization collectively offer a nuanced perspective on the value of BTC. 
+          <br>Let's explore each metric to gain insight into its importance within the Bitcoin ecosystem.
+        </p>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li>
+                  <strong>Market capitalization (Marketcap):</strong>
+                  <p>
+                      Marketcap means the total value of all Bitcoin units in circulation. It is obtained by multiplying the current price of a Bitcoin by the total number of units in circulation. 
+                        <br>This metric provides a snapshot of Bitcoin's overall market value at any given time.
+                    </p>
+                </li>
+                <li>
+                    <strong>Realized capitalization (Realizedcap):</strong>
+                    <p>
+                        Realizedcap introduces a dynamic element to Bitcoin valuation. It is calculated by multiplying the number of Bitcoins in circulation by the price at which the last purchase, expenditure or transaction occurred. This metric captures the realized value of Bitcoin, emphasizing the actual prices at which transactions were made. 
+                    </p>
+                </li>
+                <li> 
+                    <strong>Thermo capitalization (Thermocap):</strong>
+                    <p>
+                        Thermocap represents the sum of all BTC mined at the prices they were at when mined, often referred to as the primary market.
+                        <br>This metric provides information on the cumulative value of all mined bitcoin, reflecting the historical cost of creating the Bitcoin supply.
+                    </p>
+                </li>
+                <li> 
+                    <strong>Investor capitalization:</strong>
+                    <p>
+                        Investor capitalization is obtained by subtracting Thermocap from Realizedcap.
+                        <br>This metric isolates the impact of mining-related securities, offering a clearer picture of the value created through investor transactions.
+                        <br>In essence, it represents the realized value created by investor activity in the secondary market.
+                    </p>
+                </li>
+            </ul>
           </div>
-
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/nupl_heatmap_6m.html" allow="fullscreen" title="NUPL" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/sopr_heatmap_6m.html" allow="fullscreen" title="SOPR" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/realized_profit_loss_ratio_heatmap_6m.html" allow="fullscreen" title="Realized Profit Loss Ratio" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-          </div>
-
         </div>
+        <p>As Bitcoin continues to evolve, understanding these key metrics (market capitalization, realized capitalization, investor capitalization, and thermal capitalization) provides a comprehensive framework for investors and analysts.</p>
+        <p>While Marketcap offers a high-level snapshot, Realizedcap, Investor Cap, and Thermocap delve into investor-specific and realized valuations, presenting a more nuanced understanding of Bitcoin's intrinsic value.</p>
+        <p>These metrics, together, contribute to a holistic assessment of the health of the Bitcoin market and investor sentiment.</p>
+
+        <span class="katex"><span class="katex-mathml">
+            <math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mrow><mtext>Market Capitalization</mtext></mrow><mo>=</mo><mtext>Current bitcoin price</mtext><mo>×</mo><mrow><mtext>Total amount of BTC in circulation</mtext></mrow></mrow><annotation encoding="application/x-tex">\text{Market Capitalization} = \text{Current Price BTC} \times \text{Total amount of BTC in circulation}</annotation></semantics>
+            </math>
+        </span>
+        <br>
+        <span class="katex-mathml">
+            <math xmlns="http://www.w3.org/1998/Math/MathML">
+                <semantics><mrow><mtext>Realized Capitalization</mtext><mo>=</mo><mo>∑</mo><mo stretchy="false">(</mo><mtext>Bitcoin&nbsp;Units</mtext><mo>×</mo><mtext>Last&nbsp;Transaction&nbsp;Price</mtext><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\text{Realized Capitalization} = \sum (\text{Bitcoin Units} \times \text{Last Transaction Price})</annotation>
+                </semantics>
+            </math>
+        </span>
+        <br>
+        <span class="katex-mathml">
+            <math xmlns="http://www.w3.org/1998/Math/MathML">
+                <semantics><mrow><mtext>Thermo Capitalization</mtext><mo>=</mo><mo>∑</mo><mo stretchy="false">(</mo><mtext>Issuance</mtext><mo>×</mo><mtext>Price</mtext><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\text{Thermo Capitalization} = \sum (\text{Issuance} \times \text{Price})</annotation>
+                </semantics>
+            </math>
+        </span>
+        <br>
+        <span class="katex-mathml">
+            <math xmlns="http://www.w3.org/1998/Math/MathML">
+                <semantics><mrow><mtext>Investor Capitalization</mtext><mo>=</mo><mo>Realized Capitalization</mo><mo>-</mo><mtext>Thermo Capitalization</mtext></mrow></semantics>
+            </math>
+        </span>
+        <br><br>
+        <p>
+            Coins are revalued each time they are spent on-chain, creating an evolving realized valuation as owners make profits, losses, or spend until they break even.
+            ARK Invest previously defined this metric in the white paper <a href="https://ark-invest.com/white-papers/cointime-economics/?utm_campaign=Cointime%20Economics&utm_content=261766789">cointime-economics</a>, as the investor's capitalization, calculated by adding the value obtained in all transactions (T) in all block heights (N) (excluding coinbase mining transactions).
+        </p>
       </div>
 
-      <div class="row">
-        <div class="col-lg-4">
-
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Price History</h5>
-              <a href="bitcoin_price_usd_g.html">
-                <img src="assets/img/gallery/bitcoin-price-history.png" class="card-img-top" alt="Bitcoin Price USD">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Realized Price</h5>
-              <a href="realized_price_g.html">
-                <img src="assets/img/gallery/realized_price.png" class="card-img-top" alt="Bitcoin Realized Price">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin SOPR</h5>
-              <a href="sopr.html">
-                <img src="assets/img/gallery/sopr.png" class="card-img-top" alt="Bitcoin SOPR">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin MVRV</h5>
-              <a href="mvrv.html">
-                <img src="assets/img/gallery/mvrv.png" class="card-img-top" alt="Bitcoin MVRV">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Hodl Waves</h5>
-              <a href="hodl_waves.html">
-                <img src="assets/img/gallery/bitcoin-hodl-waves-relative.png" class="card-img-top" alt="Bitcoin Hodl Waves">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Moving Average</h5>
-              <a href="moving_average.html">
-                <img src="assets/img/gallery/moving_average.png" class="card-img-top" alt="Bitcoin Moving Average">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin OHLC</h5>
-              <a href="ohlc.html">
-                <img src="assets/img/gallery/bitcoin_ohlc.png" class="card-img-top" alt="Bitcoin OHLC">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin NUPL</h5>
-              <a href="bitcoin_nupl_g.html">
-                <img src="assets/img/gallery/bitcoin-nupl.png" class="card-img-top" alt="Bitcoin NUPL">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin STH Realized Price</h5>
-              <a href="bitcoin_realized_short_g.html">
-                <img src="assets/img/gallery/bitcoin-realized-short.png" class="card-img-top" alt="Bitcoin STH Realized Price">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Capitalization</h5>
-              <a href="capitalization.html">
-                <img src="assets/img/gallery/capitalization.png" class="card-img-top" alt="Bitcoin Capitalization">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Coin Days Destroyed</h5>
-              <a href="bitcoin_cdd_ajusted_90dma_g.html">
-                <img src="assets/img/gallery/cdd.png" class="card-img-top" alt="Bitcoin CDD Ajusted">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Change Held on Exchanges</h5>
-              <a href="bitcoin_ex_change_held_g.html">
-                <img src="assets/img/gallery/bitcoin-ex-change-held.png" class="card-img-top" alt="Bitcoin Change Held on Exchanges">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin S&P 500, Gold, Tesla</h5>
-              <a href="sp500_gold.html">
-                <img src="assets/img/gallery/sp500_gold.png" class="card-img-top" alt="Bitcoin S&P 500, Gold, Tesla">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Fear and Greed</h5>
-              <a href="bitcoin_fear_greed_img.html">
-                <img src="assets/img/gallery/bitcoin-fear-greed.png" class="card-img-top" alt="Bitcoin Fear and Greed">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin AVIV</h5>
-              <a href="bitcoin_aviv_g.html">
-                <img src="assets/img/gallery/bitcoin-aviv.png" class="card-img-top" alt="Bitcoin AVIV">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Price Radar Chart</h5>
-              <a href="bitcoin_halving_radar_g.html">
-                <img src="assets/img/gallery/bitcoin-4-year-cycle.png" class="card-img-top" alt="Bitcoin Price Halving Radar Chart">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Candles Yearly</h5>
-              <a href="bitcoin_year_candle_g.html">
-                <img src="assets/img/gallery/bitcoin-yearly-candles.png" class="card-img-top" alt="Bitcoin Candles Yearly">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin on a day like today</h5>
-              <a href="bitcoin_price_usd_day_g.html">
-                <img src="assets/img/gallery/bitcoin-price-usd-day.png" class="card-img-top" alt="Bitcoin on a day like today">
-              </a>
-            </div>
-          </div>
-        </div>
-
-
-      </div>              
-
     </section>
-
 
   </main><!-- End #main -->
 
@@ -761,4 +594,3 @@
 </body>
 
 </html>
-
