--- a/mvrv_ratio_dark.html
+++ b/mvrv_ratio_dark.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="__keywords__" name="keywords">
+  <meta content="MVRV Ratio" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -454,273 +454,101 @@
 
   <main id="main" class="main">
 
-    <section class="section">
+    <section class="section dashboard">
       <div class="row">
         <div id="searchResults"></div>
 
-      	<div class="pagetitle">
-	        <h1>Bitcoin On-Chain Analytics</h1>
-      	</div>
-
+        <!-- Left side columns -->
         <div class="col-lg-12">
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="200px" src="graphics/price_heatmap_6m.html" allow="fullscreen" title="BTC Price" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="graphics/mvrv_ratio_dark.html" allow="fullscreen" title="MVRV Ratio" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-xs-12 center-block text-center">
-              <p>Historically in Bitcoin, green periods have been good times to buy and red periods have been good times to sell.
-                &nbsp;&nbsp;<a href="index.html">4 years</a>
-                &nbsp;&nbsp;<a href="index_6m.html">180 days</a>
-                &nbsp;&nbsp;<a href="index_3m.html">90 days</a>
-              </p>
-            </div>
           </div>
+        </div><!-- End Left side columns -->
 
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/mvrv_heatmap_6m.html" allow="fullscreen" title="MVRV Z-Score" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/nupl_heatmap_6m.html" allow="fullscreen" title="NUPL" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/sopr_heatmap_6m.html" allow="fullscreen" title="SOPR" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/realized_profit_loss_ratio_heatmap_6m.html" allow="fullscreen" title="Realized Profit Loss Ratio" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-          </div>
-
-        </div>
       </div>
-
-      <div class="row">
-        <div class="col-lg-4">
-
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Price History</h5>
-              <a href="bitcoin_price_usd_g.html">
-                <img src="assets/img/gallery/bitcoin-price-history.png" class="card-img-top" alt="Bitcoin Price USD">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Realized Price</h5>
-              <a href="realized_price_g.html">
-                <img src="assets/img/gallery/realized_price.png" class="card-img-top" alt="Bitcoin Realized Price">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin SOPR</h5>
-              <a href="sopr.html">
-                <img src="assets/img/gallery/sopr.png" class="card-img-top" alt="Bitcoin SOPR">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin MVRV</h5>
-              <a href="mvrv.html">
-                <img src="assets/img/gallery/mvrv.png" class="card-img-top" alt="Bitcoin MVRV">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Hodl Waves</h5>
-              <a href="hodl_waves.html">
-                <img src="assets/img/gallery/bitcoin-hodl-waves-relative.png" class="card-img-top" alt="Bitcoin Hodl Waves">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Moving Average</h5>
-              <a href="moving_average.html">
-                <img src="assets/img/gallery/moving_average.png" class="card-img-top" alt="Bitcoin Moving Average">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin OHLC</h5>
-              <a href="ohlc.html">
-                <img src="assets/img/gallery/bitcoin_ohlc.png" class="card-img-top" alt="Bitcoin OHLC">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin NUPL</h5>
-              <a href="bitcoin_nupl_g.html">
-                <img src="assets/img/gallery/bitcoin-nupl.png" class="card-img-top" alt="Bitcoin NUPL">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin STH Realized Price</h5>
-              <a href="bitcoin_realized_short_g.html">
-                <img src="assets/img/gallery/bitcoin-realized-short.png" class="card-img-top" alt="Bitcoin STH Realized Price">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Capitalization</h5>
-              <a href="capitalization.html">
-                <img src="assets/img/gallery/capitalization.png" class="card-img-top" alt="Bitcoin Capitalization">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Coin Days Destroyed</h5>
-              <a href="bitcoin_cdd_ajusted_90dma_g.html">
-                <img src="assets/img/gallery/cdd.png" class="card-img-top" alt="Bitcoin CDD Ajusted">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Change Held on Exchanges</h5>
-              <a href="bitcoin_ex_change_held_g.html">
-                <img src="assets/img/gallery/bitcoin-ex-change-held.png" class="card-img-top" alt="Bitcoin Change Held on Exchanges">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin S&P 500, Gold, Tesla</h5>
-              <a href="sp500_gold.html">
-                <img src="assets/img/gallery/sp500_gold.png" class="card-img-top" alt="Bitcoin S&P 500, Gold, Tesla">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Fear and Greed</h5>
-              <a href="bitcoin_fear_greed_img.html">
-                <img src="assets/img/gallery/bitcoin-fear-greed.png" class="card-img-top" alt="Bitcoin Fear and Greed">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin AVIV</h5>
-              <a href="bitcoin_aviv_g.html">
-                <img src="assets/img/gallery/bitcoin-aviv.png" class="card-img-top" alt="Bitcoin AVIV">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Price Radar Chart</h5>
-              <a href="bitcoin_halving_radar_g.html">
-                <img src="assets/img/gallery/bitcoin-4-year-cycle.png" class="card-img-top" alt="Bitcoin Price Halving Radar Chart">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin Candles Yearly</h5>
-              <a href="bitcoin_year_candle_g.html">
-                <img src="assets/img/gallery/bitcoin-yearly-candles.png" class="card-img-top" alt="Bitcoin Candles Yearly">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bitcoin on a day like today</h5>
-              <a href="bitcoin_price_usd_day_g.html">
-                <img src="assets/img/gallery/bitcoin-price-usd-day.png" class="card-img-top" alt="Bitcoin on a day like today">
-              </a>
-            </div>
-          </div>
-        </div>
-
-
-      </div>              
-
     </section>
+    <br>
+    <section>
+      <div class="container">
+        <a href="graphics/mvrv.html">
+          <h5>Bitcoin MVRV</h5>
+        </a>
+        <p> 
+          <strong>Market Value Realized Value (MVRV)</strong> along with its Z-Score statistical correction, are a powerful tool for investors and traders seeking information on market valuation trends.
+          <br>MVRV provides a relationship between Bitcoin's current market value and the value it was purchased for (realized value), offering a unique perspective on the cryptocurrency's price dynamics.
+        </p>
 
+        <span class="katex-mathml">
+            <math xmlns="http://www.w3.org/1998/Math/MathML">
+                <semantics><mrow><mtext>MVRV</mtext><mo>=</mo><mo>Market Value</mo><mo>/</mo><mtext>Realized Value</mtext></mrow></semantics>
+            </math>
+        </span>
+        <br>
+        <span class="katex-mathml">
+            <math xmlns="http://www.w3.org/1998/Math/MathML">
+                <semantics><mrow><mtext>MVRV Z-Score</mtext><mo>=</mo>
+                  <mo>(MVRV - MVRV mean)</mo><mo>/</mo><mtext>MVRV std</mtext></mrow>
+                </semantics>
+            </math>
+        </span>
+        <p>
+            <strong>The MVRV Z-Score</strong>, an extension of the MVRV, introduces a statistical element by measuring deviations from the historical average, penalizing volatility and thus improving its analytical capabilities.
+        </p>
+        <p><strong>The MVRV indicator consists of three key components:</strong></p>
+        <div class="row">
+            <div class="col-lg-6">
+                <ul>
+                    <li>
+                        <strong>MVRV ratio:</strong> 
+                        <p>This is the main component, which represents the current market value of Bitcoin divided by its purchase value. It reflects the potential profitability of current market participants relative to historical investors.</p>
+                    </li>
+                    <li>
+                        <strong>Average MVRV (mean):</strong>
+                        <p>The average MVRV is the historical average of the MVRV ratio. It provides a basis for evaluating current market conditions, allowing the identification of periods of overvaluation or undervaluation.</p>
+                    </li>
+                    <li> 
+                        <strong>MVRV Std (Standard Deviation):</strong>
+                        <p>The standard deviation of the MVRV ratio over time quantifies the degree of variability or volatility in the MVRV values. Higher standard deviations indicate more significant price fluctuations.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <h5>MVRV Z-Score</h5>
+        <p>
+            Adds a layer of statistical analysis to the MVRV index, allowing investors to make more informed decisions based on historical patterns. Here's how to interpret the MVRV Z-Score:
+        </p>
+        <div class="row">
+            <div class="col-lg-6">
+                <ul>
+                    <li>
+                        <strong>High values (MVRV Z-Score > 5):</strong>
+                        <p>
+                            Indicate that the current price of Bitcoin is significantly higher than average purchase prices, even after accounting for volatility corrections.
+                            Historically suggests an overbought market condition, indicating that the price of Bitcoin may be approaching a high.
+                        </p>
+                    </li>
+                    <li>
+                        <strong>Low values (MVRV Z-Score < 0):</strong> 
+                        <p>
+                            - Indicates that the current price of Bitcoin is lower than the purchase prices, which could indicate an undervalued market.
+                            - Presents a potential buying opportunity, as the market may be primed for a reversion to historical average values.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <p>
+            The MVRV indicator, enriched with Z-Score, provides investors with a comprehensive framework to evaluate market conditions. 
+            <br>
+            By considering current market value relative to historical averages and taking volatility into account, the MVRV Z-Score helps identify potential overbought or oversold states, helping traders make more informed investment decisions in the dynamic world. of cryptocurrencies.
+        </p>
+      </div>
+    </section>
 
   </main><!-- End #main -->
 
@@ -747,13 +575,10 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/chart.js/chart.umd.js"></script>
-  <script src="assets/vendor/echarts/echarts.min.js"></script>
-  <script src="assets/vendor/quill/quill.min.js"></script>
-  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/bgeometrics.js"></script>
@@ -761,4 +586,3 @@
 </body>
 
 </html>
-
